--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,6 @@
 .header {
   height: 80px;
   width: 100%;
-  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,15 +27,15 @@
 
 .main-search {
   border: 1px 5px;
-  width: 500px;
+  width: 40vw;
   height: 50px;
   border-radius: 8px;
   border: 1px solid #4ca1e7;
   color: #333333;
-  padding: 8px;
+  padding: 10px;
   background-image: url("http://www.clker.com/cliparts/z/1/T/u/9/2/search-icon-hi.png");
-  background-size: 5%;
-  background-position-x: 99%;
+  background-size: 20px;
+  background-position-x: 98%;
   background-position-y: center;
   background-repeat: no-repeat;
   text-indent: 40px;
@@ -49,7 +48,9 @@
 }
 
 .logo-container {
-  width: auto;
+  width: 20vw;
+  text-align: center;
+  letter-spacing: 1.5px;
 }
 
 .logo-container h1 {
@@ -57,7 +58,7 @@
 }
 
 .logo-container h1 span {
-  color: #e74c87;
+  color: #f25;
 }
 
 .logo-container h3 {
@@ -68,7 +69,7 @@
 
 .utils-container {
   height: 34px;
-  width: 20%;
+  width: 20vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,7 +87,7 @@
 }
 
 .gallery {
-  margin: 30px auto 30px auto;
+  margin: 10px auto 30px auto;
 }
 
 .large {
@@ -185,5 +186,146 @@
   line-height: 200px;
   font-size: 80px;
   color: white;
+}
+
+.flickity-viewport {
+  height: 300px;
+}
+
+.section-title {
+  width: 80vw;
+  margin: 45px auto 0 auto;
+  border-top: solid #dfd7d7 1px;
+  font-size: 30px;
+  padding: 10px 0;
+}
+
+.gallery-book-info {
+  width: 100%;
+  padding: 5px;
+  background-color: #525050;
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(29, 26, 26, 0.829);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+}
+
+.modal form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  height: 70%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: white;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+.modal form .modal-title {
+  padding: 8px;
+  font-size: 30px;
+  text-align: center;
+  color: #333333;
+}
+
+.modal form input, .modal form button {
+  width: 40%;
+  padding: 15px;
+  margin: 2px;
+  border-radius: 4px;
+  border: solid #dfd7d7 1px;
+}
+
+.modal form button {
+  font-size: 20px;
+  background-color: #f25;
+  color: #dfd7d7;
+}
+
+.modal .switch-title {
+  font-size: 18px;
+}
+
+.display-none {
+  display: none;
+}
+
+#footer {
+  width: 100vw;
+  background-color: #f25;
+  height: 40vh;
+  margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
+  padding: 8px;
+}
+
+#footer .footer-element {
+  width: 25%;
+  padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#footer .footer-element h4 {
+  font-size: 24px;
+  color: #dfd7d7;
+}
+
+#footer .footer-element a {
+  font-size: 15px;
+  margin: auto;
+  text-decoration: none;
+  color: #dfd7d7;
+}
+
+#footer .credits {
+  width: 100vw;
+  height: 20%;
+  background-color: #333333;
+  position: absolute;
+  bottom: 0;
 }
 /*# sourceMappingURL=style.css.map */
