--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -14,7 +14,6 @@
 .header{
     height: 80px;
     width: 100%;
-    margin: 0 ;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -23,15 +22,15 @@
 }
 .main-search{
     border: 1px 5px;
-    width: 500px;
+    width: 40vw;
     height: 50px;
     border-radius: 8px;
     border:1px solid rgb(76, 161, 231);
     color: #333333;
-    padding: 8px;
+    padding:10px;
     background-image: url('http://www.clker.com/cliparts/z/1/T/u/9/2/search-icon-hi.png');
-    background-size:5%;
-    background-position-x: 99%;
+    background-size:20px;
+    background-position-x: 98%;
     background-position-y: center;
     background-repeat: no-repeat;
     text-indent: 40px;
@@ -43,11 +42,15 @@
   border-width: 2px;
 }
 .logo-container{
-    width: auto;
+  width: 20vw;
+  text-align: center;
+  letter-spacing: 1.5px;
+
     h1{
        font-size: 50px;
+
        span{
-          color: rgb(231, 76, 135);;
+          color: #f25;
        }
     }
     h3{
@@ -60,7 +63,7 @@
 
 .utils-container{
     height: 34px;
-    width: 20%;
+    width: 20vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,7 +80,7 @@
 
   .gallery {
     // background: #EEE;
-    margin:30px auto 30px auto;
+    margin:10px auto 30px auto;
   }
   .large{
     height: 20vw;
@@ -164,3 +167,113 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
     font-size: 80px;
     color: white;  
   }
+  .flickity-viewport{
+    height: 300px ;
+  }
+
+
+  .section-title{
+    width: 80vw;
+    margin:45px auto 0 auto;
+    border-top: solid #dfd7d7 1px;
+    font-size: 30px;
+    padding: 10px 0;
+    
+  }
+  .gallery-book-info{
+    width: 100%;
+    padding: 5px;
+    background-color: #525050;
+  }
+
+
+ .modal{
+   width: 100vw;
+   height: 100vh;
+   background-color:rgba(29, 26, 26, 0.829);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: fixed;
+   top: 0;
+   z-index: 2;
+   form{
+     display: flex;
+     width: 70%;
+     height: 70%;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     background-color: rgb(255, 255, 255);
+     border-radius: 4px;
+     padding: 5px;
+     .modal-title{
+       padding: 8px;
+       font-size: 30px;
+       text-align: center;
+       color:#333333
+     }
+     input,button{
+       width: 40%;
+       padding: 15px;
+       margin: 2px;
+       border-radius: 4px;
+       border:solid #dfd7d7 1px;
+       
+     }
+     button{
+       font-size: 20px;
+       background-color:#f25;
+       color: #dfd7d7;
+     }
+    
+   }
+   .switch-title{
+     font-size: 18px;
+   }
+ }
+
+ .display-none{
+   display: none;
+ }
+
+
+  #footer{
+    width: 100vw;
+    background-color: #f25;
+    height: 40vh;
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    position: relative;
+    padding: 8px;
+    .footer-element{
+       width: 25%;
+       padding: 5px;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+
+       h4{
+         font-size: 24px;
+         color: #dfd7d7;
+       }
+       a{
+         font-size: 15px;
+         margin: auto;
+         text-decoration: none;
+         color: #dfd7d7;
+
+       }
+    }
+    .credits{
+      width: 100vw;
+      height: 20%;
+      background-color: #333333;
+      position: absolute;
+      bottom: 0;
+    }
+  }
+
