--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,19 +216,21 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   position: fixed;
   top: 0;
   z-index: 2;
+  -webkit-transition: opacity 0.6s ease-in-out;
+  transition: opacity 0.6s ease-in-out;
 }
 
 .modal form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 70%;
+  width: 40%;
   height: 70%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -243,6 +245,19 @@
   background-color: white;
   border-radius: 4px;
   padding: 5px;
+  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.3s;
+  transition: opacity 0.4s ease-in-out, -webkit-transform 0.3s;
+  transition: transform 0.3s, opacity 0.4s ease-in-out;
+  transition: transform 0.3s, opacity 0.4s ease-in-out, -webkit-transform 0.3s;
+  position: relative;
+}
+
+.modal form .fas.fa-times {
+  font-size: 40px;
+  color: #f25;
+  position: absolute;
+  top: 8px;
+  left: 8px;
 }
 
 .modal form .modal-title {
@@ -253,7 +268,7 @@
 }
 
 .modal form input, .modal form button {
-  width: 40%;
+  width: 60%;
   padding: 15px;
   margin: 2px;
   border-radius: 4px;
@@ -268,14 +283,16 @@
 
 .modal .switch-title {
   font-size: 18px;
+  padding: 15x;
 }
 
 .display-none {
-  display: none;
+  opacity: 0;
+  z-index: -1;
 }
 
 #footer {
-  width: 100vw;
+  width: 100%;
   background-color: #f25;
   height: 40vh;
   margin-top: 60px;
@@ -291,11 +308,10 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   position: relative;
-  padding: 8px;
 }
 
 #footer .footer-element {
-  width: 25%;
+  width: 22%;
   padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -322,7 +338,7 @@
 }
 
 #footer .credits {
-  width: 100vw;
+  width: 100%;
   height: 20%;
   background-color: #333333;
   position: absolute;
