--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -193,13 +193,14 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
    background-color:rgba(29, 26, 26, 0.829);
    display: flex;
    align-items: center;
-   justify-content: center;
+   justify-content: space-evenly;
    position: fixed;
    top: 0;
    z-index: 2;
+   transition: opacity 0.6s ease-in-out;
    form{
      display: flex;
-     width: 70%;
+     width: 40%;
      height: 70%;
      flex-direction: column;
      align-items: center;
@@ -207,6 +208,16 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
      background-color: rgb(255, 255, 255);
      border-radius: 4px;
      padding: 5px;
+     transition:transform 0.3s, opacity 0.4s ease-in-out;
+     position: relative;
+     .fas.fa-times{
+      font-size:40px;
+      color: #f25;
+      position: absolute;
+      top: 8px;
+      left: 8px;
+     }
+
      .modal-title{
        padding: 8px;
        font-size: 30px;
@@ -214,7 +225,7 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
        color:#333333
      }
      input,button{
-       width: 40%;
+       width: 60%;
        padding: 15px;
        margin: 2px;
        border-radius: 4px;
@@ -230,16 +241,19 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
    }
    .switch-title{
      font-size: 18px;
+     padding: 15x;
    }
  }
 
  .display-none{
-   display: none;
+  //  transform: translateX(300px);
+   opacity:0;
+   z-index: -1;
  }
 
 
   #footer{
-    width: 100vw;
+    width: 100%;
     background-color: #f25;
     height: 40vh;
     margin-top: 60px;
@@ -248,9 +262,8 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
     align-items: flex-start;
     flex-wrap: wrap;
     position: relative;
-    padding: 8px;
     .footer-element{
-       width: 25%;
+       width: 22%;
        padding: 5px;
        display: flex;
        flex-direction: column;
@@ -269,7 +282,7 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
        }
     }
     .credits{
-      width: 100vw;
+      width: 100%;
       height: 20%;
       background-color: #333333;
       position: absolute;
