--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
   color: #525050;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .header {
@@ -84,6 +85,7 @@
 .utils-container * {
   margin: 8px;
   font-size: 30px;
+  cursor: pointer;
 }
 
 .gallery {
@@ -221,9 +223,9 @@
           justify-content: space-evenly;
   position: fixed;
   top: 0;
-  z-index: 2;
-  -webkit-transition: opacity 0.6s ease-in-out;
-  transition: opacity 0.6s ease-in-out;
+  z-index: 3;
+  -webkit-transition: opacity 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out;
 }
 
 .modal form {
@@ -245,19 +247,24 @@
   background-color: white;
   border-radius: 4px;
   padding: 5px;
-  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.3s;
-  transition: opacity 0.4s ease-in-out, -webkit-transform 0.3s;
-  transition: transform 0.3s, opacity 0.4s ease-in-out;
-  transition: transform 0.3s, opacity 0.4s ease-in-out, -webkit-transform 0.3s;
+  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: opacity 0.4s ease-in-out, -webkit-transform 0.2s;
+  transition: transform 0.2s, opacity 0.4s ease-in-out;
+  transition: transform 0.2s, opacity 0.4s ease-in-out, -webkit-transform 0.2s;
   position: relative;
 }
 
-.modal form .fas.fa-times {
-  font-size: 40px;
-  color: #f25;
+.modal form .fa-times {
+  font-size: 35px;
+  color: #a39d9d;
   position: absolute;
   top: 8px;
   left: 8px;
+  opacity: 80%;
+}
+
+.modal form :hover {
+  opacity: 1;
 }
 
 .modal form .modal-title {
@@ -277,13 +284,122 @@
 
 .modal form button {
   font-size: 20px;
+  color: #ffffff;
+  -webkit-box-shadow: 1px 1px 5px #333333;
+          box-shadow: 1px 1px 5px #333333;
+}
+
+.modal form .enableSubmit {
   background-color: #f25;
-  color: #dfd7d7;
+}
+
+.modal form .disableSubmit {
+  background-color: #eba0b1;
+}
+
+.modal form .warning {
+  color: red;
 }
 
 .modal .switch-title {
   font-size: 18px;
   padding: 15x;
+}
+
+.modal .book-info-modal {
+  position: relative;
+  width: 80vw;
+  height: 80vh;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.modal .book-info-modal .book-purchase {
+  height: 90%;
+  -webkit-box-flex: 1.3;
+      -ms-flex: 1.3;
+          flex: 1.3;
+  padding: 8px;
+}
+
+.modal .book-info-modal .book-purchase * {
+  text-align: center;
+}
+
+.modal .book-info-modal .book-purchase .info-img {
+  width: 100%;
+  min-width: 190px;
+  height: 70%;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: 8px 0;
+}
+
+.modal .book-info-modal .book-purchase .book-name {
+  font-size: 30px;
+}
+
+.modal .book-info-modal .book-purchase .author-name {
+  font-size: 20px;
+}
+
+.modal .book-info-modal .book-info-text {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  padding: 15px;
+  margin: 8px;
+  -webkit-transform: translateX(-20px);
+          transform: translateX(-20px);
+  border: solid 1px #ecdfe2;
+}
+
+.modal .book-info-modal .book-info-text .summery {
+  width: 90%;
+}
+
+.modal .book-info-modal .book-info-text .summery p, .modal .book-info-modal .book-info-text .summery h3 {
+  color: #f25;
+}
+
+.modal .book-info-modal .add-to-cart {
+  width: 100%;
+  height: 15%;
+  position: absolute;
+  bottom: 0;
+  margin: auto;
+  background-color: #f25;
+  padding: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 0;
+}
+
+.modal .book-info-modal .add-to-cart .info-price {
+  margin: 0 10px;
+  color: #ffffff;
+}
+
+.modal .book-info-modal .add-to-cart .cart-icon .fa-cart-plus {
+  font-size: 30px;
+  color: #ffffff;
 }
 
 .display-none {
@@ -343,5 +459,66 @@
   background-color: #333333;
   position: absolute;
   bottom: 0;
+}
+
+@media (max-width: 799.99px) {
+  .modal form {
+    width: 80%;
+    height: auto;
+  }
+  .modal form .modal-title {
+    margin-top: 15px;
+  }
+  .modal form input, .modal form button {
+    width: 80%;
+  }
+  .modal .switch-title {
+    font-size: 18px;
+    padding: 15x;
+  }
+  .modal .book-info-modal {
+    height: 95%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .modal .book-info-modal .book-purchase {
+    width: 90%;
+    padding: 0;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .modal .book-info-modal .book-purchase .book-name {
+    font-size: 20px;
+  }
+  .modal .book-info-modal .book-purchase .author-name {
+    font-size: 12px;
+  }
+  .modal .book-info-modal .book-purchase .info-img {
+    width: 70%;
+    height: 70%;
+    margin: auto;
+  }
+  .modal .book-info-modal .book-info-text {
+    margin: 0;
+    padding: 9px;
+    -webkit-box-flex: 1.5;
+        -ms-flex: 1.5;
+            flex: 1.5;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .modal .book-info-modal .book-info-text .summery {
+    height: auto;
+  }
+  .modal .book-info-modal .book-info-text .summery p {
+    font-size: 13px;
+    line-height: 16px;
+  }
+  .modal .book-info-modal .add-to-cart {
+    height: 12%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
