--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -8,6 +8,7 @@
     color: #525050;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    border-radius: 5px;
 
 }
 
@@ -70,6 +71,7 @@
     *{
         margin: 8px;
         font-size:30px;
+        cursor: pointer;
     }
    
 }
@@ -196,8 +198,8 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
    justify-content: space-evenly;
    position: fixed;
    top: 0;
-   z-index: 2;
-   transition: opacity 0.6s ease-in-out;
+   z-index: 3;
+   transition: opacity 0.1s ease-in-out;
    form{
      display: flex;
      width: 40%;
@@ -208,14 +210,18 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
      background-color: rgb(255, 255, 255);
      border-radius: 4px;
      padding: 5px;
-     transition:transform 0.3s, opacity 0.4s ease-in-out;
+     transition:transform 0.2s, opacity 0.4s ease-in-out;
      position: relative;
-     .fas.fa-times{
-      font-size:40px;
-      color: #f25;
+     .fa-times{
+      font-size:35px;
+      color: rgb(163, 157, 157);
       position: absolute;
       top: 8px;
       left: 8px;
+      opacity: 80%;
+     }
+     :hover{
+       opacity: 1;
      }
 
      .modal-title{
@@ -234,8 +240,21 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
      }
      button{
        font-size: 20px;
-       background-color:#f25;
-       color: #dfd7d7;
+       color: #ffffff;
+       box-shadow: 1px 1px 5px #333333;
+     
+     }
+     .enableSubmit{
+      background-color:#f25;
+
+     }
+     .disableSubmit{
+      background-color:rgb(235, 160, 177);
+
+     }
+
+     .warning{
+       color:red;
      }
     
    }
@@ -244,6 +263,86 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
      padding: 15x;
    }
  }
+
+.modal{
+  .book-info-modal{
+    position: relative;
+     width: 80vw;
+     height: 80vh;
+     background-color: #ffffff;
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     overflow: hidden;
+     .book-purchase{
+         height: 90%;
+         flex:1.3;
+         padding: 8px;
+         *{
+           text-align: center;
+         }
+
+         .info-img{
+            width:100%;
+            min-width: 190px;
+            height: 70%;
+            background-position:center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            margin: 8px 0;
+         }
+         .book-name{
+          font-size: 30px;
+         }
+         .author-name{
+          font-size: 20px;
+         }
+ 
+     }
+     .book-info-text{
+          flex:2;
+          // background-color:#f25;
+          padding: 15px;
+          margin: 8px;
+          transform: translateX(-20px);
+          border: solid 1px rgb(236, 223, 226);
+          .summery{
+            width: 90%;
+           p, h3{
+            color: #f25;
+           } 
+
+          }
+      
+    }
+    .add-to-cart{
+      width: 100%;
+      height: 15%;
+      position: absolute;
+      bottom:0;
+      margin: auto;
+      background-color: #f25;
+      padding: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 0;
+      .info-price{
+         margin: 0 10px;
+         color: #ffffff;
+
+      }
+      .cart-icon{
+         .fa-cart-plus{
+           font-size:30px;
+           color: #ffffff;
+         }
+      }
+    }  
+  }
+ 
+  
+}
 
  .display-none{
   //  transform: translateX(300px);
@@ -290,3 +389,76 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
     }
   }
 
+
+
+
+  //////media query////////
+  @media(max-width: 799.99px) {
+    
+
+    ////////login-modals/////////
+
+    
+ .modal{
+    form{
+      width: 80%;
+      height: auto;
+      .modal-title{
+          margin-top: 15px ;
+      }
+      input,button{
+        width: 80%;
+
+      }
+   
+    }
+  .switch-title{
+    font-size: 18px;
+    padding: 15x;
+  }
+}
+
+
+    ////////books-modals/////////
+     .modal{
+         .book-info-modal{
+           height: 95%;
+           flex-direction: column;
+           .book-purchase{
+              width: 90%;
+              padding: 0;
+              flex: 1;
+              .book-name{
+                font-size: 20px;
+               }
+               .author-name{
+                font-size: 12px;
+               }
+              .info-img{
+                width: 70%;
+                height:70%;
+                margin: auto;
+              }
+           }
+           .book-info-text{
+             margin: 0;
+             padding: 9px;
+             flex: 1.5;
+             transform:translateX(0);
+             .summery{
+               height: auto;
+               p{
+                 font-size: 13px;
+                 line-height: 16px;
+               }
+
+             }
+           }
+           .add-to-cart{
+             height: 12%;
+           }
+          
+         }
+     }
+    }
+  
