--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,348 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap');
+@import './partials/backgroung-imgs';
+@import './partials/general';
+@import './partials/header';
+@import './partials/main-banners';
+@import './partials/genres';
+@import './partials/gallery';
+@import './partials/login-modal';
+@import './partials/book-info-moadl';
+@import './partials/footer';
 
-*{
-    padding: 0;
-    margin: 0;
-    direction: rtl;
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-    color: #525050;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 5px;
 
-}
 
-.header{
-    height: 80px;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    box-shadow: 0 4px 18px -2px rgba(128, 128, 128, 0.514);
 
-}
-.main-search{
-    border: 1px 5px;
-    width: 40vw;
-    height: 50px;
-    border-radius: 8px;
-    border:1px solid rgb(76, 161, 231);
-    color: #333333;
-    padding:10px;
-    background-image: url('http://www.clker.com/cliparts/z/1/T/u/9/2/search-icon-hi.png');
-    background-size:20px;
-    background-position-x: 98%;
-    background-position-y: center;
-    background-repeat: no-repeat;
-    text-indent: 40px;
-    font-size: 15px;
- 
-}
-:focus{
-  outline: none;
-  border-width: 2px;
-}
-.logo-container{
-  width: 20vw;
-  text-align: center;
-  letter-spacing: 1.5px;
 
-    h1{
-       font-size: 50px;
+  // /* cell number */
+  // .gallery-cell:before {
+  //   display: block;
+  //   text-align: center;
+  //   // content: counter(gallery-cell);
+  //   line-height: 200px;
+  //   font-size: 80px;
+  //   color: white;  
+  // }
 
-       span{
-          color: #f25;
-       }
-    }
-    h3{
-        font-size:12px;
-        transform: translateY(-12px);
-    }
+
+
   
-   
-}
-
-.utils-container{
-    height: 34px;
-    width: 20vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    *{
-        margin: 8px;
-        font-size:30px;
-        cursor: pointer;
-    }
-   
-}
-
-
-///////////////////////////
-
-
-  .gallery {
-    // background: #EEE;
-    margin:10px auto 30px auto;
-  }
-  .large{
-    height: 20vw;
-  }
-  .mid{
-    height: 250px;
-    width: 80%;
-  }
-  .small{
-    height: 140px;
-    width: 80%;
- }
-  
-  
-  .gallery-cell {
-    width:14vw;
-    min-width: 125px;
-    height: 100%;
-    margin-right: 10px;
-    // counter-increment: gallery-cell;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-size: contain;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    p{
-      font-size: 20px;
-      transform: translateY(3px);
-    }
-  }
-  .large-cells{
-    width: 66%;
-    height: 300px;
-    min-width: 500px;
-
-  }
-
-
-  .banner1{
-    background-image: url( 'https://images-evrit.yit.co.il/Images/Products/NewBO/StripItems/10352/1100X345_8BookFEBnew.jpg');
-  }
- .banner2{
-   background-image: url( 'https://images-evrit.yit.co.il/Images/Products/NewBO/StripItems/10402/1100X345_newBook21.jpg');
-
-  }
- .banner3{
-   background-image: url( 'https://images-evrit.yit.co.il/Images/Products/NewBO/StripItems/10352/1100X345_8BookFEBnew.jpg');
-  }
- .banner4{
-   background-image: url( 'https://images-evrit.yit.co.il/Images/Products/NewBO/StripItems/10379/1100X345_merz21.jpg');
-  }
-
-
-  .proseImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/makor.png');
-  }
-  .romanceImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/romance.png');
-  }
-  .historyImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/history2.png');
-  }
-  .thrillerImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/action.png');
-  }
-  .kidsImg{
-background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/yeladim.png');
-  }
-  .jewImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/judaism.png');
-
-  }
-  .biographyImg{
-    background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/biography.png');
-  }
-  
-  /* cell number */
-  .gallery-cell:before {
-    display: block;
-    text-align: center;
-    // content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;  
-  }
-  .flickity-viewport{
-    height: 300px ;
-  }
-
-
-  .section-title{
-    width: 80vw;
-    margin:45px auto 0 auto;
-    border-top: solid #dfd7d7 1px;
-    font-size: 30px;
-    padding: 10px 0;
-    
-  }
-  .gallery-book-info{
-    width: 100%;
-    padding: 5px;
-    background-color: #525050;
-  }
-
-
- .modal{
-   width: 100vw;
-   height: 100vh;
-   background-color:rgba(29, 26, 26, 0.829);
-   display: flex;
-   align-items: center;
-   justify-content: space-evenly;
-   position: fixed;
-   top: 0;
-   z-index: 3;
-   transition: opacity 0.1s ease-in-out;
-   form{
-     display: flex;
-     width: 40%;
-     height: 70%;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     background-color: rgb(255, 255, 255);
-     border-radius: 4px;
-     padding: 5px;
-     transition:transform 0.2s, opacity 0.4s ease-in-out;
-     position: relative;
-     .fa-times{
-      font-size:35px;
-      color: rgb(163, 157, 157);
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      opacity: 80%;
-     }
-     :hover{
-       opacity: 1;
-     }
-
-     .modal-title{
-       padding: 8px;
-       font-size: 30px;
-       text-align: center;
-       color:#333333
-     }
-     input,button{
-       width: 60%;
-       padding: 15px;
-       margin: 2px;
-       border-radius: 4px;
-       border:solid #dfd7d7 1px;
-       
-     }
-     button{
-       font-size: 20px;
-       color: #ffffff;
-       box-shadow: 1px 1px 5px #333333;
-     
-     }
-     .enableSubmit{
-      background-color:#f25;
-
-     }
-     .disableSubmit{
-      background-color:rgb(235, 160, 177);
-
-     }
-
-     .warning{
-       color:red;
-     }
-    
-   }
-   .switch-title{
-     font-size: 18px;
-     padding: 15x;
-   }
- }
-
-.modal{
-  .book-info-modal{
-    position: relative;
-     width: 80vw;
-     height: 80vh;
-     background-color: #ffffff;
-     display: flex;
-     justify-content: space-evenly;
-     align-items: center;
-     overflow: hidden;
-     .book-purchase{
-         height: 90%;
-         flex:1.3;
-         padding: 8px;
-         *{
-           text-align: center;
-         }
-
-         .info-img{
-            width:100%;
-            min-width: 190px;
-            height: 70%;
-            background-position:center;
-            background-size: contain;
-            background-repeat: no-repeat;
-            margin: 8px 0;
-         }
-         .book-name{
-          font-size: 30px;
-         }
-         .author-name{
-          font-size: 20px;
-         }
- 
-     }
-     .book-info-text{
-          flex:2;
-          // background-color:#f25;
-          padding: 15px;
-          margin: 8px;
-          transform: translateX(-20px);
-          border: solid 1px rgb(236, 223, 226);
-          .summery{
-            width: 90%;
-           p, h3{
-            color: #f25;
-           } 
-
-          }
-      
-    }
-    .add-to-cart{
-      width: 100%;
-      height: 15%;
-      position: absolute;
-      bottom:0;
-      margin: auto;
-      background-color: #f25;
-      padding: 4px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 0;
-      .info-price{
-         margin: 0 10px;
-         color: #ffffff;
-
-      }
-      .cart-icon{
-         .fa-cart-plus{
-           font-size:30px;
-           color: #ffffff;
-         }
-      }
-    }  
-  }
- 
-  
-}
 
  .display-none{
   //  transform: translateX(300px);
@@ -351,114 +34,73 @@ background-image: url('https://images-evrit.yit.co.il/Images/Products/categories
  }
 
 
-  #footer{
-    width: 100%;
-    background-color: #f25;
-    height: 40vh;
-    margin-top: 60px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    position: relative;
-    .footer-element{
-       width: 22%;
-       padding: 5px;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-
-       h4{
-         font-size: 24px;
-         color: #dfd7d7;
-       }
-       a{
-         font-size: 15px;
-         margin: auto;
-         text-decoration: none;
-         color: #dfd7d7;
-
-       }
-    }
-    .credits{
-      width: 100%;
-      height: 20%;
-      background-color: #333333;
-      position: absolute;
-      bottom: 0;
-    }
-  }
-
+ 
 
 
 
   //////media query////////
   @media(max-width: 799.99px) {
-    
-
-    ////////login-modals/////////
-
-    
- .modal{
-    form{
-      width: 80%;
-      height: auto;
-      .modal-title{
-          margin-top: 15px ;
-      }
-      input,button{
-        width: 80%;
-
-      }
-   
-    }
-  .switch-title{
-    font-size: 18px;
-    padding: 15x;
-  }
-}
 
 
-    ////////books-modals/////////
-     .modal{
-         .book-info-modal{
-           height: 95%;
-           flex-direction: column;
-           .book-purchase{
-              width: 90%;
-              padding: 0;
-              flex: 1;
-              .book-name{
-                font-size: 20px;
-               }
-               .author-name{
-                font-size: 12px;
-               }
-              .info-img{
-                width: 70%;
-                height:70%;
-                margin: auto;
-              }
-           }
-           .book-info-text{
-             margin: 0;
-             padding: 9px;
-             flex: 1.5;
-             transform:translateX(0);
-             .summery{
-               height: auto;
-               p{
-                 font-size: 13px;
-                 line-height: 16px;
-               }
 
-             }
-           }
-           .add-to-cart{
-             height: 12%;
-           }
-          
-         }
-     }
+    .flickity-page-dots{
+      display: none;
     }
   
+    .large{
+      height: 25vh;
+    }
+   
+    .small{
+      width: 80%;
+   }
+    ////////login-modals/////////
+
+
+  }
+
+    ////////books-modals/////////
+    //  .modal{
+    //      .book-info-modal{
+    //        height: 95%;
+    //        flex-direction: column;
+    //        .book-purchase{
+    //           width: 90%;
+    //           padding: 0;
+    //           flex: 1;
+    //           .book-name{
+    //             font-size: 20px;
+    //            }
+    //            .author-name{
+    //             font-size: 12px;
+    //            }
+    //           .info-img{
+    //             width: 70%;
+    //             height:70%;
+    //             margin: auto;
+    //           }
+    //        }
+    //        .book-info-text{
+    //          margin: 0;
+    //          padding: 9px;
+    //          flex: 1.5;
+    //          transform:translateX(0);
+    //          .summery{
+    //            height: auto;
+    //            p{
+    //              font-size: 13px;
+    //              line-height: 16px;
+    //            }
+
+    //          }
+    //        }
+    //        .add-to-cart{
+    //          height: 12%;
+    //        }
+          
+    //      }
+    //  }
+    // }
+  
+
+    
