books search moda

--- a/public/css/partials/_backgroung-imgs.scss
+++ b/public/css/partials/_backgroung-imgs.scss
@@ -34,4 +34,13 @@
   .biographyImg{
     background-image: url('https://images-evrit.yit.co.il/Images/Products/categories_icons/biography.png');
   }
+
+  .facebook{
+    background-image: url('https://www.e-vrit.co.il/Content/Assets/Shared/facebookIcon.svg');
+
+  }
+  .instegram{
+    background-image: url('https://www.e-vrit.co.il/Content/Assets/Shared/instagramIcon.svg');
+
+  }
   
