--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -8,7 +8,7 @@
 @import './partials/login-modal';
 @import './partials/book-info-moadl';
 @import './partials/footer';
-
+@import './partials/books-search-modal';
 
 
 
