--- a/public/css/partials/_book-info-moadl.scss
+++ b/public/css/partials/_book-info-moadl.scss
@@ -9,10 +9,11 @@
        justify-content: space-evenly;
        align-items: center;
        overflow: hidden;
-       .book-purchase{
+       .book-title{
            height: 90%;
            flex:1.3;
            padding: 8px;
+          
            *{
              text-align: center;
            }
@@ -25,12 +26,25 @@
               background-size: contain;
               background-repeat: no-repeat;
               margin: 8px 0;
+              @media(max-width:500px){
+                height: 55%;
+                min-width: 130px;
+                margin: 4px 0;
+
+              }
            }
            .book-name{
             font-size: 30px;
+            @media(max-width:500px){
+              font-size: 23px;
+            }
            }
            .author-name{
             font-size: 20px;
+            @media(max-width:500px){
+              font-size: 16px;
+
+            }
            }
    
        }
@@ -41,11 +55,28 @@
             margin: 8px;
             transform: translateX(-20px);
             border: solid 1px rgb(236, 223, 226);
+            @media(max-width:800px){
+              border:none;
+            }
+            @media(max-width:500px){
+              transform: translate(0, -46px);
+              padding: 4px;
+            }
+
             .summery{
               width: 90%;
              p, h3{
               color: #f25;
+              
              } 
+             @media(max-width:500px){
+                h3{
+                  font-size: 14px;
+                }
+                p{
+                  font-size: 11px;
+                }
+            }
   
             }
         
