--- a/public/css/partials/_footer.scss
+++ b/public/css/partials/_footer.scss
@@ -1,16 +1,18 @@
 #footer{
     width: 100%;
     background-color: #f25;
-    height: 40vh;
+    height: 32vh;
     margin-top: 60px;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
     position: relative;
+    border-radius: 0px;
+
     @media(max-width:500px){
      flex-direction: column;
-     height:650px;
+     height:auto;
      align-items: center;
      justify-content: flex-start;
   }
@@ -42,12 +44,31 @@
         }
 
        }
+       .social{
+         display: flex;
+         justify-content: center;
+         width: 100%;
+         height: 30px;
+
+        .social-element{
+          width: 30px;
+          height: 100%;
+          
+          background: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+          
+       }
+       }
+      
     }
-    .credits{
-      width: 100%;
-      height: 15%;
-      background-color: #333333;
-      position: absolute;
-      bottom: 0;
-    }
+   
+  }
+  .credits{
+    width: 100%;
+    height: 30px;
+    background-color: #333333;
+  
+    border-radius: 0px;
+   
   }
