--- a/public/css/partials/_gallery.scss
+++ b/public/css/partials/_gallery.scss
@@ -25,6 +25,9 @@
       height: 98%;
      
       .gallery-cell {
+        &:hover{
+          opacity: 60%;
+        }
        min-width: 200px;
        height: 95%;
        // counter-increment: gallery-cell;
@@ -35,6 +38,7 @@
        justify-content: center;
        align-items: flex-end;
        margin: 0 5px;
+       
        @media(max-width:800px){
         min-width: 140px;
        }
@@ -46,6 +50,7 @@
          transform: translateY(3px);
        }
      }
+    
     }
   }
   // .gallery-book-info{
