--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -5,10 +5,10 @@
     justify-content: space-evenly;
     align-items: center;
     box-shadow: 0 4px 18px -2px rgba(128, 128, 128, 0.514); 
-    @media (max-width:500px) {
+    @media (max-width:800px) {
       height: 110px;
       position: relative;
-      justify-content: space-around;
+      justify-content: space-between;
 
     }
     .main-search{
@@ -25,13 +25,13 @@
       background-position-x: 98%;
       background-position-y: center;
       background-repeat: no-repeat;
-      text-indent: 40px;
+      text-indent: 30px;
       font-size: 15px;
-      @media(max-width:500px){
+  
+      @media(max-width:800px){
           position: absolute;
           bottom: 0;
-          width: 90%;
-          text-indent: 20px;
+          width: 95%;
           height: 30px;
           transform: translateX(-8px);
       }
@@ -44,7 +44,7 @@
     width:170px;
     text-align: center;
     letter-spacing: 1.5px;
-    @media(max-width:500px){
+    @media(max-width:800px){
       transform: translateY(-15px);
     }
       h1{
@@ -63,10 +63,7 @@
           @media(max-width: 800px){
             font-size: 10px;
           }
-       
       }
-    
-     
   }
   
   .utils-container{
@@ -74,12 +71,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 8px;
       *{
           margin: 8px;
           font-size:30px;
           cursor: pointer;
       } 
-      @media(max-width:500px){
+      @media(max-width:800px){
         transform: translateY(-15px);
         *{
           font-size:23px;
