--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,14 @@
   background-image: url("https://images-evrit.yit.co.il/Images/Products/categories_icons/biography.png");
 }
 
+.facebook {
+  background-image: url("https://www.e-vrit.co.il/Content/Assets/Shared/facebookIcon.svg");
+}
+
+.instegram {
+  background-image: url("https://www.e-vrit.co.il/Content/Assets/Shared/instagramIcon.svg");
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -52,6 +60,8 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 5px;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
 
 * .flickity-button.flickity-prev-next-button {
@@ -61,6 +71,19 @@
 .display-none {
   opacity: 0;
   z-index: -1;
+}
+
+.fa-times {
+  font-size: 35px;
+  color: #a39d9d;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  opacity: 80%;
+}
+
+:hover {
+  opacity: 1;
 }
 
 .header {
@@ -79,12 +102,13 @@
           box-shadow: 0 4px 18px -2px rgba(128, 128, 128, 0.514);
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header {
     height: 110px;
     position: relative;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -102,16 +126,15 @@
   background-position-x: 98%;
   background-position-y: center;
   background-repeat: no-repeat;
-  text-indent: 40px;
+  text-indent: 30px;
   font-size: 15px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header .main-search {
     position: absolute;
     bottom: 0;
-    width: 90%;
-    text-indent: 20px;
+    width: 95%;
     height: 30px;
     -webkit-transform: translateX(-8px);
             transform: translateX(-8px);
@@ -129,7 +152,7 @@
   letter-spacing: 1.5px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header .logo-container {
     -webkit-transform: translateY(-15px);
             transform: translateY(-15px);
@@ -173,6 +196,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 8px;
 }
 
 .header .utils-container * {
@@ -181,7 +205,7 @@
   cursor: pointer;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header .utils-container {
     -webkit-transform: translateY(-15px);
             transform: translateY(-15px);
@@ -317,6 +341,10 @@
   margin: 0 5px;
 }
 
+.gallery-container .gallery.mid .gallery-cell:hover {
+  opacity: 60%;
+}
+
 @media (max-width: 800px) {
   .gallery-container .gallery.mid .gallery-cell {
     min-width: 140px;
@@ -352,7 +380,7 @@
           justify-content: space-evenly;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 10;
   -webkit-transition: opacity 0.1s ease-in-out;
   transition: opacity 0.1s ease-in-out;
 }
@@ -383,9 +411,9 @@
   position: relative;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .modal form {
-    width: 95vw;
+    width: 85vw;
     height: 80vh;
     position: fixed;
     -webkit-transform: translateX(8px);
@@ -519,7 +547,7 @@
   overflow: hidden;
 }
 
-.modal .book-info-modal .book-purchase {
+.modal .book-info-modal .book-title {
   height: 90%;
   -webkit-box-flex: 1.3;
       -ms-flex: 1.3;
@@ -527,11 +555,11 @@
   padding: 8px;
 }
 
-.modal .book-info-modal .book-purchase * {
+.modal .book-info-modal .book-title * {
   text-align: center;
 }
 
-.modal .book-info-modal .book-purchase .info-img {
+.modal .book-info-modal .book-title .info-img {
   width: 100%;
   min-width: 190px;
   height: 70%;
@@ -541,12 +569,32 @@
   margin: 8px 0;
 }
 
-.modal .book-info-modal .book-purchase .book-name {
+@media (max-width: 500px) {
+  .modal .book-info-modal .book-title .info-img {
+    height: 55%;
+    min-width: 130px;
+    margin: 4px 0;
+  }
+}
+
+.modal .book-info-modal .book-title .book-name {
   font-size: 30px;
 }
 
-.modal .book-info-modal .book-purchase .author-name {
+@media (max-width: 500px) {
+  .modal .book-info-modal .book-title .book-name {
+    font-size: 23px;
+  }
+}
+
+.modal .book-info-modal .book-title .author-name {
   font-size: 20px;
+}
+
+@media (max-width: 500px) {
+  .modal .book-info-modal .book-title .author-name {
+    font-size: 16px;
+  }
 }
 
 .modal .book-info-modal .book-info-text {
@@ -560,12 +608,35 @@
   border: solid 1px #ecdfe2;
 }
 
+@media (max-width: 800px) {
+  .modal .book-info-modal .book-info-text {
+    border: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .modal .book-info-modal .book-info-text {
+    -webkit-transform: translate(0, -46px);
+            transform: translate(0, -46px);
+    padding: 4px;
+  }
+}
+
 .modal .book-info-modal .book-info-text .summery {
   width: 90%;
 }
 
 .modal .book-info-modal .book-info-text .summery p, .modal .book-info-modal .book-info-text .summery h3 {
   color: #f25;
+}
+
+@media (max-width: 500px) {
+  .modal .book-info-modal .book-info-text .summery h3 {
+    font-size: 14px;
+  }
+  .modal .book-info-modal .book-info-text .summery p {
+    font-size: 11px;
+  }
 }
 
 .modal .book-info-modal .add-to-cart {
@@ -601,7 +672,7 @@
 #footer {
   width: 100%;
   background-color: #f25;
-  height: 40vh;
+  height: 32vh;
   margin-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -615,6 +686,7 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   position: relative;
+  border-radius: 0px;
 }
 
 @media (max-width: 500px) {
@@ -623,7 +695,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 650px;
+    height: auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -679,12 +751,91 @@
   }
 }
 
-#footer .credits {
+#footer .footer-element .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
-  height: 15%;
+  height: 30px;
+}
+
+#footer .footer-element .social .social-element {
+  width: 30px;
+  height: 100%;
+  background: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.credits {
+  width: 100%;
+  height: 30px;
   background-color: #333333;
+  border-radius: 0px;
+}
+
+.half-modal {
+  width: 100%;
+  height: 85vh;
+  background-color: rgba(29, 26, 26, 0.829);
+  -webkit-filter: blur();
+          filter: blur();
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: absolute;
-  bottom: 0;
+  top: 16vh;
+  z-index: 3;
+  -webkit-transition: opacity 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out;
+  border-radius: 0;
+}
+
+.half-modal .books-search-modal {
+  width: 80%;
+  height: 90%;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+.half-modal .books-search-modal .searched-books {
+  width: 90%;
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.half-modal .books-search-modal .searched-books .section-title {
+  border: none;
+}
+
+@media (max-width: 800px) {
+  .half-modal .books-search-modal .searched-books .section-title {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 500px) {
+  .half-modal .books-search-modal .searched-books .section-title {
+    font-size: 13px;
+  }
+}
+
+.half-modal .books-search-modal .searched-books .book {
+  width: 30%;
+  height: 90%;
 }
 
 .display-none {
