--- a/public/css/partials/_login-modal.scss
+++ b/public/css/partials/_login-modal.scss
@@ -74,6 +74,12 @@
       .warning{
         color:red;
       }
+      .error-msg{
+        width: 80%;
+        color:red;
+        text-align: center;
+      }
+
      
     }
     .switch-title{
