--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -9,6 +9,7 @@
 @import './partials/book-info-moadl';
 @import './partials/footer';
 @import './partials/books-search-modal';
+@import './partials/cart-modal';
 
 
 
