--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    position: relative;
     box-shadow: 0 4px 18px -2px rgba(128, 128, 128, 0.514); 
     @media (max-width:800px) {
       height: 110px;
@@ -11,6 +12,7 @@
       justify-content: space-between;
 
     }
+   
     .main-search{
       border: 1px 5px;
       width: 40vw;
@@ -72,11 +74,38 @@
       justify-content: center;
       align-items: center;
       margin: 8px;
+      position: relative;
       *{
           margin: 8px;
           font-size:30px;
           cursor: pointer;
-      } 
+      }
+      .user-loggedin-tools{
+        position: absolute;
+        width: 100%;
+        height: 50%;
+        top:-30px;
+        right:0;
+        display: flex;
+        justify-content:flex-start;
+        align-items: center;
+        padding: 3px 2px;
+        *{
+          font-size: 15px;
+          padding: 0;
+          margin: 0;
+      
+        }
+        .user-logout{
+          transform: translateX(-4px);
+        }
+        @media(max-width: 800px){
+          top:-25px;
+          *{
+            font-size: 11px;
+          }
+        }
+     }
       @media(max-width:800px){
         transform: translateY(-15px);
         *{
