--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -94,10 +94,12 @@
           font-size: 15px;
           padding: 0;
           margin: 0;
+          font-weight: bold;
       
         }
         .user-logout{
-          transform: translateX(-4px);
+          transform: translateX(-16px);
+          font-weight:normal;
         }
         @media(max-width: 800px){
           top:-25px;
