--- a/public/css/partials/_general.scss
+++ b/public/css/partials/_general.scss
@@ -35,3 +35,34 @@
    opacity: 1;
  }
 
+
+ .must-be-logged-in-msg{
+  width: 70%;
+  height: 40%;
+  background-color:rgba(245, 239, 239, 0.966);
+   margin: 0 auto;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   position: relative;
+   h3{
+     font-size: 15px;
+   }
+} 
+
+.button{
+  width: 60%;
+  padding: 15px;
+  margin: 2px;
+  border-radius: 4px;
+  border:solid #dfd7d7 1px;
+  font-size: 20px;
+  color: #ffffff;
+  box-shadow: 1px 1px 5px #333333;
+  background-color: #f25;
+  text-align: center;
+  margin: 5px auto;
+  cursor: pointer;
+}
+
