--- a/public/css/partials/_books-search-modal.scss
+++ b/public/css/partials/_books-search-modal.scss
@@ -72,6 +72,11 @@
                   height: 110px;
                   margin: 3px;
                }
+              .fas.fa-times{
+                font-size: 10px;
+                color: #f25;
+              }
+              
             }
         }
        
