--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -10,6 +10,7 @@
 @import './partials/footer';
 @import './partials/books-search-modal';
 @import './partials/cart-modal';
+@import './partials/admin';
 
 
 
